--- a/pom.xml
+++ b/pom.xml
@@ -8,20 +8,17 @@
     <artifactId>druid-spring-boot-prometheus</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <DistributionManagement>
-        <Repository>
-            <Id>packagecloud-travis</Id>
-            <Url>
-                packagecloud+https://packagecloud.io/zero2lin/druid-spring-boot-prometheus
-            </Url>
-        </Repository>
-        <SnapshotRepository>
-            <Id>packagecloud-travis</Id>
-            <Url>
-                packagecloud+https://packagecloud.io/zero2lin/druid-spring-boot-prometheus
-            </Url>
-        </SnapshotRepository>
-    </DistributionManagement>
+    <distributionManagement>
+		<repository>
+			<id>packagecloud-travis</id>
+			<url>packagecloud+https://packagecloud.io/zero2lin/druid-spring-boot-prometheus</url>
+		</repository>
+		<snapshotRepository>
+			<id>packagecloud-travis</id>
+			<url>packagecloud+https://packagecloud.io/zero2lin/druid-spring-boot-prometheus</url>
+		</snapshotRepository>
+	</distributionManagement>
+    
     <build>
         <extensions>
 			<extension>
