--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: java
+jdk:
+- oraclejdk8
+
+cache:
+  directories:
+  - $HOME/.m2
+
 deploy:
   provider: script
-  script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn deploy"
+  script: "mvn --settings .travis.settings.xml -DskipTests=true -B clean deploy"
   skip_cleanup: true
   on:
     tags: true
+    
