--- a/pom.xml
+++ b/pom.xml
@@ -6,27 +6,51 @@
 
     <groupId>com.github.zero2lin</groupId>
     <artifactId>druid-spring-boot-prometheus</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
+
+    <name>druid-spring-boot-prometheus</name>
+    <description>This project help you to expose metrics of Alibaba Druid data source to prometheus</description>
+    <url>https://github.com/zero2lin/druid-spring-boot-prometheus</url>
+
+    <licenses>
+        <license>
+            <name>Apache 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Licheng Lin</name>
+            <email>zero2lin@gmail.com</email>
+        </developer>
+    </developers>
+
+    <scm>
+        <url>https://github.com/zero2lin/druid-spring-boot-prometheus</url>
+        <connection>scm:git:git://github.com/zero2lin/druid-spring-boot-prometheus.git</connection>
+        <developerConnection>scm:git:ssh://github.com:zero2lin/druid-spring-boot-prometheus.git</developerConnection>
+    </scm>
 
     <distributionManagement>
-		<repository>
-			<id>packagecloud-travis</id>
-			<url>packagecloud+https://packagecloud.io/zero2lin/druid-spring-boot-prometheus</url>
-		</repository>
-		<snapshotRepository>
-			<id>packagecloud-travis</id>
-			<url>packagecloud+https://packagecloud.io/zero2lin/druid-spring-boot-prometheus</url>
-		</snapshotRepository>
-	</distributionManagement>
+        <repository>
+            <id>packagecloud-travis</id>
+            <url>packagecloud+https://packagecloud.io/zero2lin/druid-spring-boot-prometheus</url>
+        </repository>
+        <snapshotRepository>
+            <id>packagecloud-travis</id>
+            <url>packagecloud+https://packagecloud.io/zero2lin/druid-spring-boot-prometheus</url>
+        </snapshotRepository>
+    </distributionManagement>
     
     <build>
         <extensions>
-			<extension>
-				<groupId>io.packagecloud.maven.wagon</groupId>
-				<artifactId>maven-packagecloud-wagon</artifactId>
-				<version>0.0.6</version>
-			</extension>
-		</extensions>
+            <extension>
+                <groupId>io.packagecloud.maven.wagon</groupId>
+                <artifactId>maven-packagecloud-wagon</artifactId>
+                <version>0.0.6</version>
+            </extension>
+        </extensions>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -39,6 +63,34 @@
                     <source>8</source>
                     <target>8</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
