--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ jdk:
 
 cache:
   directories:
-  - $HOME/.m2
+    - $HOME/.m2
+
+install: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -Dgpg.skip -B -V
 
 ## export GPG details
 before_install:
@@ -15,6 +17,5 @@ deploy:
   provider: script
   script: "mvn --settings .travis.settings.xml -DskipTests=true -B clean deploy"
   skip_cleanup: true
-  on:
-    tags: true
+
     
