--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,7 @@ deploy:
   provider: script
   script: "mvn --settings .travis.settings.xml -DskipTests=true -B clean deploy"
   skip_cleanup: true
+  on:
+    all_branches: true
 
     
